Add WindowNode (#240)
Co-authored-by: shuai.xu <xushuai@bigo.sg>